--- a/index.html
+++ b/index.html
@@ -2,46 +2,62 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>My New Hugo Site</title>
+<title>PAL Art | PAL Art</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content>
+<meta name=description content="Welcome to my site. I post art here.">
 <meta name=generator content="Hugo 0.91.2">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/index.xml rel=alternate type=application/rss+xml title="My New Hugo Site">
-<link href=/index.xml rel=feed type=application/rss+xml title="My New Hugo Site">
-<meta property="og:title" content="My New Hugo Site">
-<meta property="og:description" content>
+<link href=/index.xml rel=alternate type=application/rss+xml title="PAL Art">
+<link href=/index.xml rel=feed type=application/rss+xml title="PAL Art">
+<meta property="og:title" content="PAL Art">
+<meta property="og:description" content="Welcome to my site. I post art here.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://hugo.pal-art.in/">
-<meta itemprop=name content="My New Hugo Site">
-<meta itemprop=description content><meta name=twitter:card content="summary">
-<meta name=twitter:title content="My New Hugo Site">
-<meta name=twitter:description content>
+<meta property="og:url" content="https://hugo.pal-art.in/">
+<meta itemprop=name content="PAL Art">
+<meta itemprop=description content="Welcome to my site. I post art here."><meta name=twitter:card content="summary">
+<meta name=twitter:title content="PAL Art">
+<meta name=twitter:description content="Welcome to my site. I post art here.">
 </head>
 <body class="ma0 avenir bg-near-white">
-<header>
-<div class="pb3-m pb6-l bg-black">
+<header class="cover bg-top" style=background-image:url(https://hugo.pal-art.in/images/bg.jpeg)>
+<div class=bg-black-60>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
-My New Hugo Site
+PAL Art
 </a>
 <div class="flex-l items-center">
+<ul class="pl0 mr3">
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/about-me/ title="About Me page">
+About Me
+</a>
+</li>
+</ul>
 <div class=ananke-socials>
+<a href=https://www.facebook.com/plvadher target=_blank class="facebook ananke-social-link link-transition stackoverflow link dib z-999 pt3 pt0-l mr1" title="Facebook link" rel=noopener aria-label="follow on Facebook——Opens in a new window">
+<span class=icon><svg style="enable-background:new 0 0 67 67" viewBox="0 0 67 67" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M28.765 50.32h6.744V33.998h4.499l.596-5.624h-5.095l.007-2.816c0-1.466.14-2.253 2.244-2.253h2.812V17.68h-4.5c-5.405.0-7.307 2.729-7.307 7.317v3.377h-3.369v5.625h3.369V50.32zM33 64C16.432 64 3 50.569 3 34S16.432 4 33 4s30 13.431 30 30S49.568 64 33 64z" style="fill-rule:evenodd;clip-rule:evenodd"/></svg>
+</span>
+<span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd;fill:"/></svg>
+</span></a>
 </div>
 </div>
 </div>
 </nav>
-<div class="tc-l pv3 ph3 ph4-ns">
-<h1 class="f2 f-subheadline-l fw2 light-silver mb0 lh-title">
-My New Hugo Site
+<div class="tc-l pv4 pv6-l ph3 ph4-ns">
+<h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
+PAL Art
 </h1>
+<h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
+Welcome to my site. I post art here.
+</h2>
 </div>
 </div>
 </header>
 <main class=pb7 role=main>
 <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
+<p>Hi, I am Parshottam Vadher.</p>
 </article>
 <div class="pa3 pa4-ns w-100 w-70-ns center">
 <h1 class=flex-none>
@@ -52,31 +68,111 @@ Recent Posts
 <article class="bb b--black-10">
 <div class="db pv4 ph3 ph0-l no-underline dark-gray">
 <div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
+<div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+<a href=/posts/parinda/ class="db grow">
+<img src=https://hugo.pal-art.in/posts/parinda/Parinda.jpg class=img alt="image from Parinda">
+</a>
+</div>
+<div class="blah w-100 w-60-ns pl3-ns">
 <h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/posts/test-post/ class="color-inherit dim link">
-Test Post
+<a href=/posts/parinda/ class="color-inherit dim link">
+Parinda
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-THis has come content
 </div>
-<a href=/posts/test-post/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+<a href=/posts/parinda/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+<a href=/posts/rotalo-and-onion/ class="db grow">
+<img src=https://hugo.pal-art.in/posts/rotalo-and-onion/Rotlo-and-Doongali.jpg class=img alt="image from Rotalo and Onion">
+</a>
+</div>
+<div class="blah w-100 w-60-ns pl3-ns">
+<h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=/posts/rotalo-and-onion/ class="color-inherit dim link">
+Rotalo and Onion
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+</div>
+<a href=/posts/rotalo-and-onion/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+<a href=/posts/ramkrushan-paramhans/ class="db grow">
+<img src=https://hugo.pal-art.in/posts/ramkrushan-paramhans/Ramkrushna-Parmahans.jpeg class=img alt="image from Ramkrushan Paramhans">
+</a>
+</div>
+<div class="blah w-100 w-60-ns pl3-ns">
+<h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=/posts/ramkrushan-paramhans/ class="color-inherit dim link">
+Ramkrushan Paramhans
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+Ramkrushna Parmahans dots drawing
+</div>
+<a href=/posts/ramkrushan-paramhans/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
 </div>
 </div>
 </article>
 </div>
 </section>
+<section class=w-100>
+<h1 class=f3>More</h1>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=/posts/my-common-man/ class="link black dim">
+My Common Man
+</a>
+</h2>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=/posts/sketch-of-word-leaders-1-emmanuel-macron/ class="link black dim">
+Sketch of Word Leaders 1: Emmanuel Macron
+</a>
+</h2>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=/posts/bapuji/ class="link black dim">
+Bapuji
+</a>
+</h2>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=/posts/amitabh-sketch/ class="link black dim">
+Amitabh Sketch
+</a>
+</h2>
+<a href=/posts/ class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All Posts</a>
+</section>
 </div>
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
-<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=http://hugo.pal-art.in/>
-&copy; My New Hugo Site 2021
+<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://hugo.pal-art.in/>
+&copy; PAL Art 2022
 </a>
 <div>
 <div class=ananke-socials>
+<a href=https://www.facebook.com/plvadher target=_blank class="facebook ananke-social-link link-transition stackoverflow link dib z-999 pt3 pt0-l mr1" title="Facebook link" rel=noopener aria-label="follow on Facebook——Opens in a new window">
+<span class=icon><svg style="enable-background:new 0 0 67 67" viewBox="0 0 67 67" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M28.765 50.32h6.744V33.998h4.499l.596-5.624h-5.095l.007-2.816c0-1.466.14-2.253 2.244-2.253h2.812V17.68h-4.5c-5.405.0-7.307 2.729-7.307 7.317v3.377h-3.369v5.625h3.369V50.32zM33 64C16.432 64 3 50.569 3 34S16.432 4 33 4s30 13.431 30 30S49.568 64 33 64z" style="fill-rule:evenodd;clip-rule:evenodd"/></svg>
+</span>
+<span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd;fill:"/></svg>
+</span></a>
 </div></div>
 </div>
 </footer>
