--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>PAL Art</title>
+<title>Parshottam Laxman Vadher | PAL Art</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content>
 <meta name=generator content="Hugo 0.92.0">
@@ -11,7 +11,7 @@
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://hugo.pal-art.in/404.html">
+<meta property="og:url" content="https://www.pal-art.in/404.html">
 <meta itemprop=name content="404 Page not found">
 <meta itemprop=description content><meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
@@ -23,7 +23,7 @@
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
-PAL Art
+Parshottam Laxman Vadher | PAL Art
 </a>
 <div class="flex-l items-center">
 <ul class="pl0 mr3">
@@ -54,8 +54,8 @@ This is not the page you were looking for
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
-<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://hugo.pal-art.in/>
-&copy; PAL Art 2022
+<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://www.pal-art.in/>
+&copy; Parshottam Laxman Vadher | PAL Art 2022
 </a>
 <div>
 <div class=ananke-socials>
