--- a/index.html
+++ b/index.html
@@ -2,30 +2,30 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>PAL Art | PAL Art</title>
+<title>PAL Art | Parshottam Laxman Vadher | PAL Art</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content="Welcome to my site. I post art here.">
 <meta name=generator content="Hugo 0.92.0">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/index.xml rel=alternate type=application/rss+xml title="PAL Art">
-<link href=/index.xml rel=feed type=application/rss+xml title="PAL Art">
+<link href=/index.xml rel=alternate type=application/rss+xml title="Parshottam Laxman Vadher | PAL Art">
+<link href=/index.xml rel=feed type=application/rss+xml title="Parshottam Laxman Vadher | PAL Art">
 <meta property="og:title" content="PAL Art">
 <meta property="og:description" content="Welcome to my site. I post art here.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://hugo.pal-art.in/">
+<meta property="og:url" content="https://www.pal-art.in/">
 <meta itemprop=name content="PAL Art">
 <meta itemprop=description content="Welcome to my site. I post art here."><meta name=twitter:card content="summary">
 <meta name=twitter:title content="PAL Art">
 <meta name=twitter:description content="Welcome to my site. I post art here.">
 </head>
 <body class="ma0 avenir bg-near-white">
-<header class="cover bg-top" style=background-image:url(https://hugo.pal-art.in/images/bg.jpeg)>
+<header class="cover bg-top" style=background-image:url(https://www.pal-art.in/images/bg.jpeg)>
 <div class=bg-black-60>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
-PAL Art
+Parshottam Laxman Vadher | PAL Art
 </a>
 <div class="flex-l items-center">
 <ul class="pl0 mr3">
@@ -70,7 +70,7 @@ Recent Posts
 <div class="flex flex-column flex-row-ns">
 <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
 <a href=/posts/parinda/ class="db grow">
-<img src=https://hugo.pal-art.in/posts/parinda/Parinda.jpg class=img alt="image from Parinda">
+<img src=https://www.pal-art.in/posts/parinda/Parinda.jpg class=img alt="image from Parinda">
 </a>
 </div>
 <div class="blah w-100 w-60-ns pl3-ns">
@@ -93,7 +93,7 @@ Parinda
 <div class="flex flex-column flex-row-ns">
 <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
 <a href=/posts/rotalo-and-onion/ class="db grow">
-<img src=https://hugo.pal-art.in/posts/rotalo-and-onion/Rotlo-and-Doongali.jpg class=img alt="image from Rotalo and Onion">
+<img src=https://www.pal-art.in/posts/rotalo-and-onion/Rotlo-and-Doongali.jpg class=img alt="image from Rotalo and Onion">
 </a>
 </div>
 <div class="blah w-100 w-60-ns pl3-ns">
@@ -116,7 +116,7 @@ Rotalo and Onion
 <div class="flex flex-column flex-row-ns">
 <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
 <a href=/posts/ramkrushan-paramhans/ class="db grow">
-<img src=https://hugo.pal-art.in/posts/ramkrushan-paramhans/Ramkrushna-Parmahans.jpeg class=img alt="image from Ramkrushan Paramhans">
+<img src=https://www.pal-art.in/posts/ramkrushan-paramhans/Ramkrushna-Parmahans.jpeg class=img alt="image from Ramkrushan Paramhans">
 </a>
 </div>
 <div class="blah w-100 w-60-ns pl3-ns">
@@ -163,8 +163,8 @@ Amitabh Sketch
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
-<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://hugo.pal-art.in/>
-&copy; PAL Art 2022
+<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://www.pal-art.in/>
+&copy; Parshottam Laxman Vadher | PAL Art 2022
 </a>
 <div>
 <div class=ananke-socials>
