deploy: b7ae8aeff44c7f6d47dd98edcefcbe6688ec3638

--- a/index.html
+++ b/index.html
@@ -69,6 +69,29 @@ Recent Posts
 <div class="db pv4 ph3 ph0-l no-underline dark-gray">
 <div class="flex flex-column flex-row-ns">
 <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+<a href=/posts/leonardo-da-vinci-sketch/ class="db grow">
+<img src=https://www.pal-art.in/posts/leonardo-da-vinci-sketch/leonardo-da-vinci-sketch.jpg class=img alt="image from Leonardo Da Vinci Sketch">
+</a>
+</div>
+<div class="blah w-100 w-60-ns pl3-ns">
+<h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=/posts/leonardo-da-vinci-sketch/ class="color-inherit dim link">
+Leonardo Da Vinci Sketch
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+</div>
+<a href=/posts/leonardo-da-vinci-sketch/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
 <a href=/posts/parinda/ class="db grow">
 <img src=https://www.pal-art.in/posts/parinda/Parinda.jpg class=img alt="image from Parinda">
 </a>
@@ -110,33 +133,14 @@ Rotalo and Onion
 </div>
 </article>
 </div>
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
-<a href=/posts/ramkrushan-paramhans/ class="db grow">
-<img src=https://www.pal-art.in/posts/ramkrushan-paramhans/Ramkrushna-Parmahans.jpeg class=img alt="image from Ramkrushan Paramhans">
-</a>
-</div>
-<div class="blah w-100 w-60-ns pl3-ns">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/posts/ramkrushan-paramhans/ class="color-inherit dim link">
-Ramkrushan Paramhans
-</a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Ramkrushna Parmahans dots drawing
-</div>
-<a href=/posts/ramkrushan-paramhans/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
 </section>
 <section class=w-100>
 <h1 class=f3>More</h1>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=/posts/ramkrushan-paramhans/ class="link black dim">
+Ramkrushan Paramhans
+</a>
+</h2>
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=/posts/my-common-man/ class="link black dim">
 My Common Man
@@ -150,11 +154,6 @@ Sketch of Word Leaders 1: Emmanuel Macron
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=/posts/bapuji/ class="link black dim">
 Bapuji
-</a>
-</h2>
-<h2 class="f5 fw4 mb4 dib mr3">
-<a href=/posts/amitabh-sketch/ class="link black dim">
-Amitabh Sketch
 </a>
 </h2>
 <a href=/posts/ class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All Posts</a>
