deploy: eac259f846d009fc5dee94a39327dd49805d1acf

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -9,7 +9,7 @@ I am Parshottam Laxman Vadher
 I live in Jamnagar, Gujarat, India
 I am a teacher by profession and artist by passion.">
 <meta name=generator content="Hugo 0.92.0">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
+<meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
 <meta property="og:title" content="About Me">
 <meta property="og:description" content="Hi
