--- a/about-me/index.html
+++ b/about-me/index.html
@@ -33,6 +33,8 @@ I am a teacher by profession and artist by passion."><meta itemprop=datePublishe
 I am Parshottam Laxman Vadher
 I live in Jamnagar, Gujarat, India
 I am a teacher by profession and artist by passion.">
+<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-QP990YRZ8P','auto'),ga('send','pageview'))</script>
+<script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
 <body class="ma0 avenir bg-near-white">
 <header>
