--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <meta itemprop=description content="Welcome to my site. I post art here."><meta name=twitter:card content="summary">
 <meta name=twitter:title content="PAL Art">
 <meta name=twitter:description content="Welcome to my site. I post art here.">
+<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-QP990YRZ8P','auto'),ga('send','pageview'))</script>
+<script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
 <body class="ma0 avenir bg-near-white">
 <header class="cover bg-top" style=background-image:url(https://www.pal-art.in/images/bg.jpeg)>
